<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">Loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="button_text_download">DOWNLOAD</string>

    <string name="download_notification_channel_id">DownloadComplete</string>
    <string name="file_name">File name</string>
    <string name="status">Status</string>
    <string name="ok">OK</string>
    <string name="glide_image_loading_library_by_bump_tech">Glide - Image Loading Library by Bump Tech</string>
    <string name="loadapp_current_repository_by_udacity">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_type_safe_http_client_for_android_and_java_by_square_inc">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="image_cloud_downloading">Image cloud downloading</string>
</resources>
